--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@cosmjs/math": "^0.29.4",
     "@cosmjs/proto-signing": "^0.29.4",
     "@cosmjs/stargate": "^0.29.4",
+    "@cosmjs/tendermint-rpc": "^0.29.4",
     "@keplr-wallet/types": "^0.11.17",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
